--- a/cToast/src/main/res/values/strings.xml
+++ b/cToast/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
 	<string name="app_name">CToast</string>
 	<string name="test_msg">Hello this is error msg.</string>
+	<string name="error">Fail</string>
+	<string name="success">Success</string>
 	<string name="empty"></string>
 </resources>
